--- a/javascript_array_problem_03.html
+++ b/javascript_array_problem_03.html
@@ -4,8 +4,9 @@
     <script type="text/javascript">
         function minimum_cost(houses) {
           var result = 0;
-          // TODO : ì—¬ê¸°ì— ì—¬ëŸ¬ë¶„ì´ ì§ì ‘ ì½”ë”©ì„ í•´ì£¼ì„¸ìš”.
-          return result;
+          // TODO : ¿©±â¿¡ ¿©·¯ºĞÀÌ Á÷Á¢ ÄÚµùÀ» ÇØÁÖ¼¼¿ä.
+		Àß ¸ô°Ú½¿´ç
+	return result;
         }
         var test_case_01 = [[26, 40, 83], [49, 60, 57], [13, 89, 99]];
         var test_case_02 = [[1, 20, 30], [50, 5, 6], [9, 3, 7]];
@@ -14,7 +15,6 @@
         var test_case_05 = [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12], [13, 14, 15], [16, 17, 18]];
         var test_case_06 = [[26, 40, 83], [0, 60, 57], [0, 0, 0]];
         var test_case_07 = [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0], [20, 100, 10]];
-
         expect(minimum_cost(test_case_01), 96);
         expect(minimum_cost(test_case_02), 10);
         expect(minimum_cost(test_case_03), 101);
@@ -22,14 +22,12 @@
         expect(minimum_cost(test_case_05), 54);
         expect(minimum_cost(test_case_06), 40);
         expect(minimum_cost(test_case_07), 10);
-
         function expect(l, r) {
             if (l === r)
                 console.log('pass');
             else
                 console.log('fail');
         }
-
     </script>
 </head>
 <body>
