--- a/javascript_array_problem_02.html
+++ b/javascript_array_problem_02.html
@@ -3,17 +3,30 @@
 <head>
     <script type="text/javascript">
         function check_string() {
-          // TODO : ì—¬ê¸°ì— ì—¬ëŸ¬ë¶„ì´ ì§ì ‘ ì½”ë”©ì„ í•´ì£¼ì„¸ìš”.          
+          // TODO : ¿©±â¿¡ ¿©·¯ºĞÀÌ Á÷Á¢ ÄÚµùÀ» ÇØÁÖ¼¼¿ä.    
+           var open = 0, close = 0
+            var result = false;
+            for (i = 0; i < arguments[0].length; i++){
+                if (arguments[0].charAt(i) == '(')
+                    open++;
+                else
+                    close++;
+
+            if (open < close)
+                break;
+            }
+            if (open == close)
+            	result = true;
+
+        return result;      
           return true;
         }
-
         expect(check_string('(())())'), false);
         expect(check_string('(((()())()'), false);
         expect(check_string('(()())((()))'), true);
         expect(check_string('((()()(()))(((())))()'), false);
         expect(check_string('()()()()(()()())()'), true);
         expect(check_string('(()((())()('), false);
-
         function expect(l, r) {
             if (l === r)
                 console.log('pass');
